<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    
    <item 
        android:id="@+id/print_last_transaction"
        app:showAsAction="never"
        android:title="@string/pos_menu_print_last_transactions">
    </item>
    <item
        android:id="@+id/reports"
        app:showAsAction="never"
        android:title="@string/pos_menu_reports">
    </item>
    <item
        android:id="@+id/inventory"
        app:showAsAction="never"
        android:title="@string/pos_menu_inventory">
    </item>
        <item
        android:id="@+id/quickbuttons"
            app:showAsAction="never"
        android:title="@string/pos_menu_keyboard">
    </item>
    <item
        android:id="@+id/customers"
        app:showAsAction="never"
        android:title="@string/pos_menu_customers">
    </item>
    <item
        android:id="@+id/settings"
        app:showAsAction="never"
        android:title="@string/pos_menu_settings">
    </item>
    <item
        android:id="@+id/sync"
        app:showAsAction="never"
        android:title="@string/pos_menu_update">
    </item>
    <item
        android:id="@+id/help"
        app:showAsAction="never"
        android:title="@string/pos_menu_help">
    </item>
    <item
        android:id="@+id/menu_additem"
        android:icon="@drawable/additem2"
        android:orderInCategory="0"
        app:showAsAction="always|withText"
        android:title="@string/pos_menu_product"/>

    <item
        android:id="@+id/menu_addperson"
        android:icon="@drawable/person"
        android:orderInCategory="1"
        app:showAsAction="always|withText"
        android:title="@string/pos_menu_customer"/>
    <item
        android:id="@+id/menu_saverecall"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="1"
        app:showAsAction="always|withText"
        android:title="@string/pos_menu_save"/>
    <item
        android:id="@+id/menu_admin"
        android:icon="@drawable/person"
        android:orderInCategory="1"
        app:showAsAction="always|withText"
        android:title="@string/pos_menu_admin"/>
</menu>