<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/itemDetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1" >

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/prod_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:padding="1dip"
                    android:singleLine="true"
                    android:text="Name"
                    android:textAppearance="@style/textLayoutAppearance" >
                </TextView>

                <TextView
                    android:id="@+id/prod_quantnum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:gravity="right"
                    android:padding="1dip"
                    android:text="Quanity"
                    android:textAppearance="@style/textLayoutAppearance" >
                </TextView>

                <TextView
                    android:id="@+id/prod_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="right"
                    android:padding="1dip"
                    android:text="Price"
                    android:textAppearance="@style/textLayoutAppearance" >
                </TextView>
            </TableRow>

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/prod_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:padding="1dip"
                    android:singleLine="true"
                    android:text="This is an old system. 1234567890123456"
                    android:textAppearance="@style/textLayoutAppearance" >
                </TextView>

                <TextView
                    android:id="@+id/prod_quantnum2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:gravity="right"
                    android:padding="1dip"
                    android:text="@string/total"
                    android:textAppearance="@style/textLayoutAppearance" >
                </TextView>

                <TextView
                    android:id="@+id/prod_pricenum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="right"
                    android:padding="1dip"
                    android:text="$12.95"
                    android:textAppearance="@style/textLayoutAppearance" >
                </TextView>
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageButton1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_more" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/extendView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/editItemDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <TableLayout
                    android:id="@+id/TableLayout02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1" >

                    <TableRow
                        android:id="@+id/TableRow03"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/expandEditPriceLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.8"
                            android:gravity="center"
                            android:text="@string/edit_price"
                            android:textAppearance="@style/textLayoutAppearance" >
                        </TextView>

                        <TextView
                            android:id="@+id/expandEditQuantityLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:gravity="center"
                            android:text="Edit Quantity"
                            android:textAppearance="@style/textLayoutAppearance" >
                        </TextView>

                        <TextView
                            android:id="@+id/expandEditDiscountLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.8"
                            android:gravity="center"
                            android:text="@string/edit_percent"
                            android:textAppearance="@style/textLayoutAppearance" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow04"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false" >

                        <EditText
                            android:id="@+id/expandEditPrice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.8"
                            android:inputType="numberDecimal"
                            android:textAppearance="@style/textLayoutAppearance" >

                            <requestFocus />
                        </EditText>

                        <Button
                            android:id="@+id/expandMinus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".45"
                            android:text="-"
                            android:textAppearance="@style/textLayoutAppearance"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <EditText
                            android:id="@+id/expandEditQuan"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="number"
                            android:textAppearance="@style/textLayoutAppearance" />

                        <Button
                            android:id="@+id/expandPlus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".45"
                            android:text="+"
                            android:textAppearance="@style/textLayoutAppearance"
                            android:textStyle="bold"
                            android:typeface="monospace" />

                        <EditText
                            android:id="@+id/expandEditDiscount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:inputType="numberDecimal"
                            android:textAppearance="@style/textLayoutAppearance" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/setItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/set_item"
                    android:textAppearance="@style/textLayoutAppearance" />

                <Button
                    android:id="@+id/deleteItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/delete_item"
                    android:textAppearance="@style/textLayoutAppearance" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>